# RailDB

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/engine/account_management/: CMakeLists.txt  account_management.cpp  account_management.h
src/memory_manager/: CMakeLists.txt  memory_management.cpp  memory_management.h
src/query_planner/: CMakeLists.txt
src/query_processor/: CMakeLists.txt  processor.cpp  query_processor.cpp  query_processor.h
src/storage_manager/: CMakeLists.txt  storage.cpp  storage.h
src/table_management/: CMakeLists.txt  table_management.cpp  table_management.h
src/table_struct/: struct.cpp
src/templates/: CMakeLists.txt  data_type_template.h
src/transaction_manager/: CMakeLists.txt  transaction_manager.cpp  transaction_manager.h
tests/: CMakeLists.txt
